Icons colors changed

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -42,17 +42,17 @@
 			</select>
 			<select title="Классифицируйте необходимое действие" name="icon" id="TaskIcon">
 				<option value=""></option>
-				<option value="wait">ждать</option>
-				<option value="remind">контролировать</option>
+				<option value="wait">дождаться</option>
+				<option value="remind">дожать</option>
 				<option value="call">позвонить</option>
 				<option value="force">заставить</option>
 				<option value="mail">написать</option>
-				<option value="prepare">подготовить</option>
+				<option value="prepare">разработать</option>
 				<option value="manage">организовать</option>
 				<option value="meet">встретиться</option>
-				<option value="visit">посетить</option>
+				<option value="visit">съездить</option>
 				<option value="make">сделать</option>
-				<option value="journey">отправиться</option>
+				<option value="journey">слетать</option>
 				<option value="think">придумать</option>
 			</select>
 			<select title="Текущий статус задачи" name="status" id="TaskStatus">
