--- a/static/tasks.css
+++ b/static/tasks.css
@@ -7,7 +7,7 @@ html {
 	font-size: 9pt;
 }
 body {
-	background: linear-gradient( #bbb, transparent 1px), linear-gradient( 90deg, #bbb, transparent 1px);
+	background: linear-gradient( rgba(187,187,187,0.5), transparent 1px), linear-gradient( 90deg, rgba(187,187,187,0.5), transparent 1px);
 	background-size: 12px 12px;
 	background-position: center center;
 }
