Add tasks statistics at the top of page.

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -92,6 +92,9 @@
 			<div class="leftLine">
 				<label id="TaskResult"></label>
 			</div>
+			<div class="rightLine">
+				<label id="TaskStats"></label>
+			</div>
 			<br class="clearBoth">
 		</form>
 		<table id="TasksTable">
