Add favicons for browsers and iOS

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>{{.Labels["webPageTitle"]}}</title>
+	<title>{{.Labels.webPageTitle}}</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 	<link rel="stylesheet" type="text/css" href="/static/tasks.css?1">
+	<link rel="icon" type="image/png" href="/static/favicon.png">
+	<link rel="apple-touch-icon" type="image/png" href="/static/faviphone.png">
 	<script src="/static/tasks.js?1"></script>
 </head>
 <body>
